# AlekSIS-App-Hjelp

./: .gitignore  CHANGELOG.rst  README.rst  pyproject.toml
aleksis/apps/hjelp/: admin.py  apps.py  forms.py  mailer.py  menus.py  model_helper.py  models.py  parse_icon_names.py  preferences.py  rules.py  urls.py  views.py
aleksis/apps/hjelp/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/de/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/en/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/la/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/nb_NO/LC_MESSAGES/: django.po
aleksis/apps/hjelp/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/hjelp/migrations/: 0001_initial.py  0002_add_bug_report.py  0002_auto_20201221_1815.py  0003_alter_faqquestion_answer_text_field.py  0003_faqsection_position.py  0004_add_extended_data.py  0005_rename_bug_category.py
aleksis/apps/hjelp/static/css/: hjelp.css  select2-materialize.css
aleksis/apps/hjelp/static/css/hjelp/: hjelp.css
aleksis/apps/hjelp/static/js/: hjelp.js
aleksis/apps/hjelp/templates/hjelp/: ask.html  faq.html  feedback.html  feedback_submitted.html  issue_report.html  issue_report_submitted.html  order_faq.html  question_submitted.html  rebus.html  rebus_submitted.html
aleksis/apps/hjelp/templates/hjelp/mail/: feedback.html  feedback.txt  question.html  question.txt  rebus.html  rebus.txt
aleksis/apps/hjelp/templates/templated_email/: faq.email  feedback.email  hjelp.email  html_mail.css  rebus.email
biscuit/apps/hjelp/: __init__.py  apps.py
biscuit/apps/hjelp/templates/hjelp/: question_submitted.html  rebus.html
