[tool.poetry]
name = "AlekSIS-App-Hjelp"
version = "1.0a4dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"

description = "AlekSIS (School Information System) — App Hjelp (FAQ and support)"
authors = ["Julian Leucker <leuckeju@katharineum.de>", "Frank Poetzsch-Heffter <p-h@katharineum.de>", "Jonathan Weth <wethjo@katharineum.de>", "Hangzhi Yu <yuha@katharineum.de>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/AlekSIS/AlekSIS-App-Hjelp"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../../" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
