[tool.poetry]
name = "AlekSIS-App-Hjelp"
version = "2.0a3.dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"

description = "AlekSIS (School Information System) — App Hjelp (FAQ, issue reporting and support)"
authors = ["Julian Leucker <leuckeju@katharineum.de>", "Frank Poetzsch-Heffter <p-h@katharineum.de>", "Jonathan Weth <wethjo@katharineum.de>", "Hangzhi Yu <yuha@katharineum.de>", "Tom Teichler <tom.teichler@teckids.org>"]
maintainers = ["Jonathan Weth <wethjo@katharineum.de>", "Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2-or-later"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/official/AlekSIS-App-Hjelp"
documentation = "https://aleksis.org/AlekSIS/docs/html/"
keywords = ["SIS", "education", "school", "support", "feedback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = "^2.0a2"

[tool.poetry.dev-dependencies]
sphinx = "^3.0"
sphinxcontrib-django = "^0.5.0"
sphinx-autodoc-typehints = "^1.7"
django-stubs = "^1.1"
pytest = "^6.0"
pytest-django = "^4.1"
pytest-django-testing-postgresql = "^0.1"
selenium = "^3.141.0"
safety = "^1.8.5"
flake8 = "^3.7.9"
flake8-django = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
black = "^19.10b0"
flake8-black = "^0.2.0"
isort = "^5.0.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
